2007-11-30  Kevin Kofler  <Kevin@tigcc.ticalc.org>

        * interp.c (gtk_main_quit): Prototype.
          (m68k_go_sim, sim_resume, sim_exception): Use it instead of setjmp/longjmp.
          (interp_trap): Remove variable.

2007-02-18  Kevin Kofler  <Kevin@tigcc.ticalc.org>

        * Drop no longer needed ../common/configure patch.
        * configure: Substitute INCINTL, LIBINTL and LIBINTL_DEP.

2006-07-20  Kevin Kofler  <Kevin@tigcc.ticalc.org>

       * interp.c (engine_start, gtk_main, engine_stop): Prototype.
         (sim_resume): Remove unused variable "prev".
         (opt_cpu_level, target_dsp, initted_memory): Remove (unused file-scope variables).
         (sim_trace_one): Remove unused variable "bestsym". Fix printf format/argument mismatches.

2006-02-11  Kevin Kofler  <Kevin@tigcc.ticalc.org>

        * ../configure.ac, ../configure: Also filter out CXX=... from subdir configury arguments.

2006-01-07  Kevin Kofler  <Kevin@tigcc.ticalc.org>

        * ../common/Make-common.in: Override C_INCLUDE_PATH and LIBRARY_PATH for build host object
                                    compilation.

2006-01-06  Kevin Kofler  <Kevin@tigcc.ticalc.org>

        * ../configure.ac, ../configure: Filter out CC=..., CFLAGS=... etc. from subdir configury
                                         arguments.

2006-01-06  Kevin Kofler  <Kevin@tigcc.ticalc.org>

        * Drop no longer needed ../common/aclocal.m4 patch.
        * Drop no longer needed ../common/callback.c patches.

2005-06-02  Kevin Kofler  <Kevin@tigcc.ticalc.org>

        * ../common/aclocal.m4, ../common/configure, configure: Fix libintl detection.

2005-05-12  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c: Use asm_setjmp and asm_longjmp on Win32.

2005-04-28  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (verbose_trace): Delete variable.
        (sim_open): Don't set verbose_trace.

2005-04-28  Kevin Kofler  <Kevin@tigcc.ticalc.org>
